--- a/package.json
+++ b/package.json
@@ -2,5 +2,28 @@
   "name": "next-bnb",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev -p 1234",
+    "start": "next start"
+  },
+  "dependencies": {
+    "babel-plugin-inline-react-svg": "^2.0.1",
+    "babel-plugin-styled-components": "^2.0.7",
+    "next": "^12.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.5",
+    "styled-reset": "^4.4.2"
+  },
+  "devDependencies": {
+    "@types/node": "^18.6.5",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.25",
+    "typescript": "^4.7.4"
+  },
+  "repository": "https://github.com/SeorangLee/next-bnb.git",
+  "author": "AzureAD\\SierraLee <sierra.lee@brtnx.com>"
 }
