--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-redux-wrapper": "^7.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5",
@@ -31,6 +32,7 @@
     "@types/node": "^18.6.5",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-outside-click-handler": "^1.3.1",
     "@types/styled-components": "^5.1.25",
     "typescript": "^4.7.4"
   },
